测试AS的GIT能否正常使用（无重要更新）

--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -74,6 +74,7 @@
                 android:orientation="horizontal" />
 
             <RelativeLayout
+                android:id="@+id/miaosha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/home_panicbuying_background" >
